# Ayo-online

./: README.md  pyproject.toml
ai/: heuristic.py  search.py
api/: main.py
engine/: __init__.py  endings.py  rules.py  state.py
tests/: test_ai.py  test_api.py  test_endings.py  test_rules.py  test_state.py
web/: app.js  index.html  style.css
